lib/translator/test/fixtures/ok/raw/op-unary.prg
PROGRAM unary_operators
BEGIN
  -2
  +2
END
