lib/translator/test/fixtures/error/raw/break-outside-loop.prg
PROGRAM break_outside_loop
BEGIN
    LOOP
    END
    BREAK
END
